<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/LayoutHeader"
        android:text="@string/tvNameGame"
        style="@style/TextViewHeaderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHeader">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/pic_main_croco"/>

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:text="@string/butNewGame"
            style='@style/ButtonStyle'/>

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:text="@string/butContinue"
            style='@style/ButtonStyle'/>

        <Button
            android:id="@+id/buttonHistory"
            android:layout_width="match_parent"
            android:text="@string/butHistory"
            style='@style/ButtonStyle'/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>