<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:id="@+id/linearHeader"
        style="@style/LinearLayoutHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_marginStart="30dp"
            style="@style/ImageViewBackArrow"/>

        <TextView
            android:id="@+id/textViewHeader"
            android:paddingEnd="60dp"
            android:text="@string/tvNameGame"
            style="@style/TextViewHeaderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSmallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearHeader">

        <Button
            android:id="@+id/buttonRules"
            android:layout_width="140dp"
            android:layout_marginStart="25dp"
            android:text="@string/butRules"
            style='@style/ButtonStyle'/>

        <Button
            android:id="@+id/buttonMode"
            android:layout_width="220dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="25dp"
            android:text="@string/easyMode"
            style='@style/ButtonStyle'/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCardWord"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/startWords"
        style='@style/TextViewCardStyle'
        app:layout_constraintBottom_toTopOf="@+id/buttonNewWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSmallButton"/>

    <Button
        android:id="@+id/buttonNewWord"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/butNewWord"
        style='@style/ButtonStyle'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
